a0.14（综合案例-完善对齐，完善行间距example02-4）

--- a/选择器/综合案例-体育页面.html
+++ b/选择器/综合案例-体育页面.html
@@ -27,17 +27,28 @@
 		.search {
 			color: red;
 		}
+
 		.btn {
 			color: green;
 			font-weight: 700;
 		}
 
+		/*文本 水平居中对齐*/
+		.tac { 
+			text-align: center;
+		}
+		
+		p {
+			/*行高(间距) */
+			line-height: 26px;
+		}
+
 	</style>
 </head>
 <body>
-	<h1 class="title">中乙队赛前突然换帅仍胜毅腾 高原黑马欲阻击舜天</h1>
+	<h1 class="title tac">中乙队赛前突然换帅仍胜毅腾 高原黑马欲阻击舜天</h1>
 
-	<div>  
+	<div class="tac">  
 		<span class="time">2017年07月16日20:11</span> 
 		<span class="people"> 新浪体育 评论中大奖 （11人参与）</span> 
 		<a href="#">收藏本文</a>
