--- a/盒子模型/插入图片和背景图片的区别.html
+++ b/盒子模型/插入图片和背景图片的区别.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<style>
-		.pic {
+		.pic,
+		.bg {
 			width: 500px;
 			height: 500px;
 			border: 1px solid red;
@@ -13,11 +14,19 @@
 		.pic img {
 			margin: 30px;
 		}
+		.bg {
+			background: url(images/3.jpg) no-repeat;
+			background-position: 30px 30px;
+			/*padding: 30px;*/
+		}
 	</style>
 </head>
 <body>
 	<div class="pic">
 		<img src="images/3.jpg" alt="">
+	</div>
+	<div class="bg">
+
 	</div>
 </body>
 </html>
