a0.65（ 综合案例example15-2——实现列表内部的间隙）

--- a/盒子模型/综合案例-新闻列表/demo.html
+++ b/盒子模型/综合案例-新闻列表/demo.html
@@ -10,13 +10,14 @@
 			padding: 0;
 		}
 	   .box {
-	   		width: 328px;
-	   		height: 226px;
+		   width: 298px;
+		   height: 196px;
 			/*灰色*/
 	   		border: 1px solid #ccc;
 	   		/*块级盒子水平居中*/
 	   		margin: 100px auto;
 	   		background: url(images/line.jpg);
+		    padding: 15px;
 	   }
 	</style>
 </head>
