--- a/盒子模型/综合案例-新闻列表/demo.html
+++ b/盒子模型/综合案例-新闻列表/demo.html
@@ -4,26 +4,44 @@
 	<meta charset="UTF-8">
 	<title>新闻列表综合案例</title>
 	<style>
-	  /*这句话必须要写， 不要忘却了*/
+		/*这句话必须要写， 不要忘却了*/
 		* {
 			margin: 0;
 			padding: 0;
 		}
-	   .box {
-		   width: 298px;
-		   height: 196px;
+		.box {
+			width: 298px;
+			height: 196px;
 			/*灰色*/
-	   		border: 1px solid #ccc;
-	   		/*块级盒子水平居中*/
-	   		margin: 100px auto;
-	   		background: url(images/line.jpg);
-		    padding: 15px;
-	   }
+			border: 1px solid #ccc;
+			/*块级盒子水平居中*/
+			margin: 100px auto;
+			background: url(images/line.jpg);
+			/*如果一个盒子给了一个padding值，会撑大盒子*/
+			padding: 15px;
+		}
+		.box h2 {
+			font-size: 18px;
+			/*字跟下划线有一些间隙，我们设置为上下均有间隙*/
+			padding: 5px 0;
+			/*底边框*/
+			border-bottom: 1px solid #ccc;
+		}
 	</style>
 </head>
 <body>
-	<div class="box">
-
-	</div>
+<div class="box">
+	<!-- 标题盒子 -->
+	<h2>最新文章/New Articles</h2>
+	<!--	ul>li*5>a 快速生成如下代码： -->
+	<!-- 列表盒子 -->
+	<ul>
+		<li><a href="#">北京招聘网页设计，平面设计，php</a></li>
+		<li><a href="#">体验javascript的魅力</a></li>
+		<li><a href="#">jquery世界来临</a></li>
+		<li><a href="#">网页设计师的梦想</a></li>
+		<li><a href="#">jquery中的链式编程是什么</a></li>
+	</ul>
+</div>
 </body>
 </html>
