--- a/盒子模型/拓展/圆角矩形.html
+++ b/盒子模型/拓展/圆角矩形.html
@@ -12,9 +12,20 @@
 			/*border-radius: 100px;*/
 			border-radius: 50%;
 		}
+		p {
+			width: 100px;
+			height: 20px;
+			background-color: red;
+			font-size: 12px;
+			color: #fff;
+			text-align: center;
+			line-height: 20px;
+			border-radius: 10px;
+		}
 	</style>
 </head>
 <body>
 	<div> </div>
+	<p> 特价 免费送 </p>
 </body>
 </html>
