--- a/浮动/07-小米案例练习.html
+++ b/浮动/07-小米案例练习.html
@@ -9,6 +9,10 @@
 			margin: 0;
 			padding: 0;
 		}
+		/*清除列表样式 前面的小点点*/
+		li {
+			list-style: none;
+		}
 		.box {
 			width: 1226px;
 			height: 615px;
@@ -22,19 +26,40 @@
 			height: 615px;
 			background-color: purple;
 		}
+		.left img {
+			/*width: 234px;*/
+			width: 100%;
+		}
 		.right {
 			float: right;
 			width: 992px;
 			height: 615px;
 			background-color: skyblue;
 		}
+		.right li {
+			float: left;
+			width: 234px;
+			height: 300px;
+			background-color: pink;
+			margin-left: 14px;
+			margin-bottom: 14px;
+		}
 	</style>
 </head>
 <body>
 	<div class="box">
 		<div class="left">
+			<img src="images/mi.jpg" alt="">
 		</div>
 		<ul class="right">
+			<li>1</li>
+			<li>2</li>
+			<li>3</li>
+			<li>4</li>
+			<li>5</li>
+			<li>6</li>
+			<li>7</li>
+			<li>8</li>
 		</ul>
 	</div>
 </body>
