--- a/浮动/08-导航栏案例/nav.html
+++ b/浮动/08-导航栏案例/nav.html
@@ -8,6 +8,9 @@
 			margin: 0;
 			padding: 0;
 		}
+		li {
+			list-style: none;
+		}
 		.banner {
 			width: 760px;
 			height: 150px;
@@ -21,6 +24,10 @@
 			margin: 0 auto;
 			background: url(images/nav_bg.jpg) repeat-x;
 		}
+		.nav ul li {
+			/*因为li 让文字竖着显示，所以必须给li 添加浮动*/
+			float: left;
+		}
 	</style>
 </head>
 <body>
@@ -29,7 +36,17 @@
 		<img src="images/banner.jpg" alt="">
 	</div>
 	<!-- nav 导航栏部分  -->
+	<!-- 以后我们重要的导航栏，都要采取 li 包含a 的写法 -->
 	<div class="nav">
+<!--		ul>li*6>a  快速生成    -->
+		<ul>
+			<li><a href="#">网站首页</a></li>
+			<li><a href="#">网站首页</a></li>
+			<li><a href="#">网站首页</a></li>
+			<li><a href="#">网站首页</a></li>
+			<li><a href="#">网站首页</a></li>
+			<li><a href="#">网站首页</a></li>
+		</ul>
 	</div>
 </body>
 </html>
