--- a/study/index.html
+++ b/study/index.html
@@ -6,6 +6,10 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-123
+	<!-- header头部模块开始 -->
+	<div class="header w">
+
+	</div>
+	<!-- header头部模块结束 -->
 </body>
 </html>
