--- a/study/index.html
+++ b/study/index.html
@@ -8,7 +8,9 @@
 <body>
 	<!-- header头部模块开始 -->
 	<div class="header w">
-
+		<div class="logo">
+			<img src="images/logo.png" alt="">
+		</div>
 	</div>
 	<!-- header头部模块结束 -->
 </body>
