--- a/study/index.html
+++ b/study/index.html
@@ -11,6 +11,15 @@
 		<div class="logo">
 			<img src="images/logo.png" alt="">
 		</div>
+		<!--	.nav	-->
+		<div class="nav">
+			<!--	ul>li*3>a		-->
+			<ul>
+				<li><a href="#">首页</a></li>
+				<li><a href="#">课程</a></li>
+				<li><a href="#">职业规划</a></li>
+			</ul>
+		</div>
 	</div>
 	<!-- header头部模块结束 -->
 </body>
