a1.05（头部制作——搜索框-html框子）

--- a/study/index.html
+++ b/study/index.html
@@ -20,6 +20,11 @@
 				<li><a href="#">职业规划</a></li>
 			</ul>
 		</div>
+		<!--	.search  	-->
+		<div class="search">
+			<input type="text">
+			<button>按钮</button>
+		</div>
 	</div>
 	<!-- header头部模块结束 -->
 </body>
