a1.06（头部制作——搜索框-input框完成）

--- a/study/index.html
+++ b/study/index.html
@@ -22,7 +22,7 @@
 		</div>
 		<!--	.search  	-->
 		<div class="search">
-			<input type="text">
+			<input type="text" value="输入关键词">
 			<button>按钮</button>
 		</div>
 	</div>
