a1.07（头部制作——搜索框-完成）

--- a/study/index.html
+++ b/study/index.html
@@ -23,7 +23,7 @@
 		<!--	.search  	-->
 		<div class="search">
 			<input type="text" value="输入关键词">
-			<button>按钮</button>
+			<button></button>
 		</div>
 	</div>
 	<!-- header头部模块结束 -->
