a1.08（头部制作—— user个人信息-html框子）

--- a/study/index.html
+++ b/study/index.html
@@ -8,9 +8,11 @@
 <body>
 	<!-- header头部模块开始 -->
 	<div class="header w">
+		<!-- logo -->
 		<div class="logo">
 			<img src="images/logo.png" alt="">
 		</div>
+		<!-- nav -->
 		<!--	.nav	-->
 		<div class="nav">
 			<!--	ul>li*3>a		-->
@@ -20,10 +22,16 @@
 				<li><a href="#">职业规划</a></li>
 			</ul>
 		</div>
+		<!-- search -->
 		<!--	.search  	-->
 		<div class="search">
 			<input type="text" value="输入关键词">
 			<button></button>
+		</div>
+		<!-- user -->
+		<div class="user">
+			<img src="images/user.jpg" alt="">
+			user01
 		</div>
 	</div>
 	<!-- header头部模块结束 -->
