a1.10（banner制作-基本框子）

--- a/study/index.html
+++ b/study/index.html
@@ -35,5 +35,9 @@
 		</div>
 	</div>
 	<!-- header头部模块结束 -->
+	<!-- banner 部分start -->
+	<div class="banner">
+	</div>
+	<!-- banner 部分end -->
 </body>
 </html>
