a1.11（banner制作-设置版心）

--- a/study/index.html
+++ b/study/index.html
@@ -37,6 +37,9 @@
 	<!-- header头部模块结束 -->
 	<!-- banner 部分start -->
 	<div class="banner">
+		<div class="w">
+			11111111111111111111111111111111111
+		</div>
 	</div>
 	<!-- banner 部分end -->
 </body>
