a1.12（banner制作-左侧导航栏框子）

--- a/study/index.html
+++ b/study/index.html
@@ -38,7 +38,10 @@
 	<!-- banner 部分start -->
 	<div class="banner">
 		<div class="w">
-			11111111111111111111111111111111111
+			<!-- 左侧 subnav  -->
+			<div class="subnav">
+
+			</div>
 		</div>
 	</div>
 	<!-- banner 部分end -->
