a1.14（banner制作-左侧导航栏内容框子）

--- a/study/index.html
+++ b/study/index.html
@@ -40,7 +40,18 @@
 		<div class="w">
 			<!-- 左侧 subnav  -->
 			<div class="subnav">
-				111111111111111111111111111111111111111111111111111111111111111111111
+					<!--	ul>li*9>a			-->
+				<ul>
+					<li><a href="#">前端开发 <span>></span></a></li>
+					<li><a href="#">后端开发 <span>></span></a></li>
+					<li><a href="#">移动开发 <span>></span></a></li>
+					<li><a href="#">人工智能 <span>></span></a></li>
+					<li><a href="#">商业预测 <span>></span></a></li>
+					<li><a href="#">云计算&大数据 <span>></span></a></li>
+					<li><a href="#">运维&从测试 <span>></span></a></li>
+					<li><a href="#">UI设计 <span>></span></a></li>
+					<li><a href="#">产品 <span>></span></a></li>
+				</ul>
 			</div>
 		</div>
 	</div>
