a1.16（banner制作-右侧导航栏框子）

--- a/study/index.html
+++ b/study/index.html
@@ -53,6 +53,10 @@
 					<li><a href="#">产品 <span>></span></a></li>
 				</ul>
 			</div>
+			<!-- 右侧 course -->
+			<div class="course">
+
+			</div>
 		</div>
 	</div>
 	<!-- banner 部分end -->
