--- a/study/index.html
+++ b/study/index.html
@@ -55,7 +55,9 @@
 			</div>
 			<!-- 右侧 course -->
 			<div class="course">
+				<div class="course-hd">
 
+				</div>
 			</div>
 		</div>
 	</div>
