a1.19（课程表模块-右侧导航栏-3号盒子设置padding）

--- a/study/index.html
+++ b/study/index.html
@@ -58,6 +58,9 @@
 				<div class="course-hd">
 					我的课程表
 				</div>
+				<div class="course-bd">
+					123
+				</div>
 			</div>
 		</div>
 	</div>
