a1.21（课程表模块-3号盒子设置内容-设置li）

--- a/study/index.html
+++ b/study/index.html
@@ -59,7 +59,22 @@
 					我的课程表
 				</div>
 				<div class="course-bd">
-					123
+					<!--		ul>li*3			-->
+					<ul>
+						<li>
+							<h4>继续学习 程序语言设计</h4>
+							<p>正在学习-使用对象</p>
+						</li>
+						<li>
+							<h4>继续学习 程序语言设计</h4>
+							<p>正在学习-使用对象</p>
+						</li>
+						<li>
+							<h4>继续学习 程序语言设计</h4>
+							<p>正在学习-使用对象</p>
+						</li>
+
+					</ul>
 				</div>
 			</div>
 		</div>
