a1.28（精品推荐小模块-大盒子）

--- a/study/index.html
+++ b/study/index.html
@@ -82,7 +82,7 @@
 	</div>
 	<!-- banner 部分end -->
 	<!-- goods START -->
-	<div class="good w">
+	<div class="goods w">
         123
 	</div>
 </body>
