--- a/study/index.html
+++ b/study/index.html
@@ -84,6 +84,14 @@
 	<!-- goods START -->
 	<div class="goods w">
 		<h3> 精品推荐 </h3>
+		<div class="goods-item">
+			|  <a href="#">jQuery</a>
+			|  <a href="#">Spark</a>
+			|  <a href="#">MySQL</a>
+			|  <a href="#">JavaWeb</a>
+			|  <a href="#">MySQL</a>
+			|  <a href="#">JavaWeb</a>
+		</div>
 	</div>
 </body>
 </html>
