a1.32（精品推荐大模块-完成1号盒子）

--- a/study/index.html
+++ b/study/index.html
@@ -94,5 +94,13 @@
 		</div>
 		<div class="mod"> 修改兴趣 </div>
 	</div>
+	<!-- box start -->
+	<div class="box w">
+		<div class="box-hd">
+			<h3>精品推荐</h3>
+			<a href="#">查看全部</a>
+		</div>
+	</div>
+	<!-- box end -->
 </body>
 </html>
