a1.34（精品推荐大模块-3号盒子大体框子）

--- a/study/index.html
+++ b/study/index.html
@@ -100,6 +100,12 @@
 			<h3>精品推荐</h3>
 			<a href="#">查看全部</a>
 		</div>
+		<!--	.box-bd	-->
+		<div class="box-bd">
+			<ul>
+				<li></li>
+			</ul>
+		</div>
 	</div>
 	<!-- box end -->
 </body>
