--- a/study/index.html
+++ b/study/index.html
@@ -103,16 +103,56 @@
 		<!--	.box-bd	-->
 		<div class="box-bd">
 			<ul>
-				<li>1</li>
-				<li>2</li>
-				<li>3</li>
-				<li>4</li>
-				<li>5</li>
-				<li>6</li>
-				<li>7</li>
-				<li>8</li>
-				<li>9</li>
-				<li>10</li>
+				<li>
+					<img src="images/pic.jpg" alt="">
+					<h4>Think PHP 5.0 博客系统实战项目演练</h4>
+					<p><span>高级</span>  •  1125人在学习</p>
+				</li>
+				<li>
+					<img src="images/pic.jpg" alt="">
+					<h4>Think PHP 5.0 博客系统实战项目演练</h4>
+					<p><span>高级</span>  •  1125人在学习</p>
+				</li>
+				<li>
+					<img src="images/pic.jpg" alt="">
+					<h4>Think PHP 5.0 博客系统实战项目演练</h4>
+					<p><span>高级</span>  •  1125人在学习</p>
+				</li>
+				<li>
+					<img src="images/pic.jpg" alt="">
+					<h4>Think PHP 5.0 博客系统实战项目演练</h4>
+					<p><span>高级</span>  •  1125人在学习</p>
+				</li>
+				<li>
+					<img src="images/pic.jpg" alt="">
+					<h4>Think PHP 5.0 博客系统实战项目演练</h4>
+					<p><span>高级</span>  •  1125人在学习</p>
+				</li>
+				<li>
+					<img src="images/pic.jpg" alt="">
+					<h4>Think PHP 5.0 博客系统实战项目演练</h4>
+					<p><span>高级</span>  •  1125人在学习</p>
+				</li>
+				<li>
+					<img src="images/pic.jpg" alt="">
+					<h4>Think PHP 5.0 博客系统实战项目演练</h4>
+					<p><span>高级</span>  •  1125人在学习</p>
+				</li>
+				<li>
+					<img src="images/pic.jpg" alt="">
+					<h4>Think PHP 5.0 博客系统实战项目演练</h4>
+					<p><span>高级</span>  •  1125人在学习</p>
+				</li>
+				<li>
+					<img src="images/pic.jpg" alt="">
+					<h4>Think PHP 5.0 博客系统实战项目演练</h4>
+					<p><span>高级</span>  •  1125人在学习</p>
+				</li>
+				<li>
+					<img src="images/pic.jpg" alt="">
+					<h4>Think PHP 5.0 博客系统实战项目演练</h4>
+					<p><span>高级</span>  •  1125人在学习</p>
+				</li>
 			</ul>
 		</div>
 	</div>
