a1.39（精品推荐大模块-清除浮动）

--- a/study/index.html
+++ b/study/index.html
@@ -101,7 +101,7 @@
 			<a href="#">查看全部</a>
 		</div>
 		<!--	.box-bd	-->
-		<div class="box-bd">
+		<div class="box-bd clearfix">
 			<ul>
 				<li>
 					<img src="images/pic.jpg" alt="">
@@ -157,5 +157,8 @@
 		</div>
 	</div>
 	<!-- box end -->
+	<div class="test">
+
+	</div>
 </body>
 </html>
