a1.40（精品推荐大模块-清除浮动是为了后续布局）

--- a/study/index.html
+++ b/study/index.html
@@ -157,6 +157,44 @@
 		</div>
 	</div>
 	<!-- box end -->
+	<!-- box start -->
+	<div class="box w">
+		<div class="box-hd">
+			<h3>精品推荐</h3>
+			<a href="#">查看全部</a>
+		</div>
+		<!--	.box-bd	-->
+		<div class="box-bd clearfix">
+			<ul>
+				<li>
+					<img src="images/pic.jpg" alt="">
+					<h4>Think PHP 5.0 博客系统实战项目演练</h4>
+					<p><span>高级</span>  •  1125人在学习</p>
+				</li>
+				<li>
+					<img src="images/pic.jpg" alt="">
+					<h4>Think PHP 5.0 博客系统实战项目演练</h4>
+					<p><span>高级</span>  •  1125人在学习</p>
+				</li>
+				<li>
+					<img src="images/pic.jpg" alt="">
+					<h4>Think PHP 5.0 博客系统实战项目演练</h4>
+					<p><span>高级</span>  •  1125人在学习</p>
+				</li>
+				<li>
+					<img src="images/pic.jpg" alt="">
+					<h4>Think PHP 5.0 博客系统实战项目演练</h4>
+					<p><span>高级</span>  •  1125人在学习</p>
+				</li>
+				<li>
+					<img src="images/pic.jpg" alt="">
+					<h4>Think PHP 5.0 博客系统实战项目演练</h4>
+					<p><span>高级</span>  •  1125人在学习</p>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<!-- box end -->
 	<div class="test">
 
 	</div>
