a1.41（精品推荐大模块-设置底部框子）

--- a/study/index.html
+++ b/study/index.html
@@ -195,8 +195,10 @@
 		</div>
 	</div>
 	<!-- box end -->
-	<div class="test">
-
+	<!-- footer start -->
+	<div class="footer w">
+		123
 	</div>
+	<!-- footer end -->
 </body>
 </html>
