--- a/study/index.html
+++ b/study/index.html
@@ -197,7 +197,13 @@
 	<!-- box end -->
 	<!-- footer start -->
 	<div class="footer w">
-		123
+		<!-- 左侧 -->
+		<div class="copyright">
+			<img src="images/logo.png" alt="">
+			<p>学成在线致力于普及中国最好的教育它与中国一流大学和机构合作提供在线课程。<br>
+				© 2017年XTCG Inc.保留所有权利。-沪ICP备15025210号</p>
+			<a href="#" class="app"> 下载 app</a>
+		</div>
 	</div>
 	<!-- footer end -->
 </body>
