--- a/study/index.html
+++ b/study/index.html
@@ -196,39 +196,41 @@
 	</div>
 	<!-- box end -->
 	<!-- footer start -->
-	<div class="footer w">
-		<!-- 左侧 -->
-		<div class="copyright">
-			<img src="images/logo.png" alt="">
-			<p>学成在线致力于普及中国最好的教育它与中国一流大学和机构合作提供在线课程。<br>
-				© 2017年XTCG Inc.保留所有权利。-沪ICP备15025210号</p>
-			<a href="#" class="app"> 下载 app</a>
-		</div>
-		<!-- 右侧 -->
-		<div class="links">
-			<!--			dl>dt+dd*5>a			-->
-			<dl>
-				<dt>关于学成网</dt>
-				<dd><a href="#">关于</a></dd>
-				<dd><a href="#">管理团队</a></dd>
-				<dd><a href="#">工作机会</a></dd>
-				<dd><a href="#">客户服务</a></dd>
-				<dd><a href="#">帮助</a></dd>
-			</dl>
-			<dl>
-				<dt>新手指南</dt>
-				<dd><a href="#">如何注册</a></dd>
-				<dd><a href="#">如何选课</a></dd>
-				<dd><a href="#">如何拿到毕业证</a></dd>
-				<dd><a href="#">学分是什么</a></dd>
-				<dd><a href="#">考试未通过怎么办</a></dd>
-			</dl>
+	<div class="footer">
+		<div class="w">
+			<!-- 左侧 -->
+			<div class="copyright">
+				<img src="images/logo.png" alt="">
+				<p>学成在线致力于普及中国最好的教育它与中国一流大学和机构合作提供在线课程。<br>
+					© 2017年XTCG Inc.保留所有权利。-沪ICP备15025210号</p>
+				<a href="#" class="app"> 下载 app</a>
+			</div>
+			<!-- 右侧 -->
+			<div class="links">
+				<!--			dl>dt+dd*5>a			-->
+				<dl>
+					<dt>关于学成网</dt>
+					<dd><a href="#">关于</a></dd>
+					<dd><a href="#">管理团队</a></dd>
+					<dd><a href="#">工作机会</a></dd>
+					<dd><a href="#">客户服务</a></dd>
+					<dd><a href="#">帮助</a></dd>
+				</dl>
+				<dl>
+					<dt>新手指南</dt>
+					<dd><a href="#">如何注册</a></dd>
+					<dd><a href="#">如何选课</a></dd>
+					<dd><a href="#">如何拿到毕业证</a></dd>
+					<dd><a href="#">学分是什么</a></dd>
+					<dd><a href="#">考试未通过怎么办</a></dd>
+				</dl>
 
-			<dl>
-				<dt>合作伙伴</dt>
-				<dd><a href="#">合作机构</a></dd>
-				<dd><a href="#">合作导师</a></dd>
-			</dl>
+				<dl>
+					<dt>合作伙伴</dt>
+					<dd><a href="#">合作机构</a></dd>
+					<dd><a href="#">合作导师</a></dd>
+				</dl>
+			</div>
 		</div>
 	</div>
 	<!-- footer end -->
