--- a/定位/03-绝对定位以带有定位的父级来移动位置.html
+++ b/定位/03-绝对定位以带有定位的父级来移动位置.html
@@ -14,7 +14,9 @@
 			width: 200px;
 			height: 200px;
 			background-color: purple;
-			margin-left: 100px;
+			position: absolute;
+			top: 50px;
+			left: 50px;
 		}
 	</style>
 </head>
