--- a/定位/03-绝对定位以带有定位的父级来移动位置.html
+++ b/定位/03-绝对定位以带有定位的父级来移动位置.html
@@ -4,12 +4,18 @@
 	<meta charset="UTF-8">
 	<title>绝对定位以带有定位的父级元素来移动位置</title>
 	<style>
+		.grandfather {
+			width: 500px;
+			height: 500px;
+			background-color: skyblue;
+			position: relative;
+		}
 		.father {
 			width: 350px;
 			height: 350px;
 			background-color: pink;
 			margin: 100px;
-			position: relative;
+			/*position: relative;*/
 		}
 		.son {
 			width: 200px;
@@ -22,8 +28,10 @@
 	</style>
 </head>
 <body>
-	<div class="father">
-		<div class="son"></div>
+	<div class="grandfather">
+		<div class="father">
+			<div class="son"></div>
+		</div>
 	</div>
 </body>
 </html>
