a1.59（example07-2——浮动 也能转换display inline-block）

--- a/定位/11-绝对定位改变display属性.html
+++ b/定位/11-绝对定位改变display属性.html
@@ -5,7 +5,7 @@
 	<title>Document</title>
 	<style>
 		div {
-			display: inline-block;
+			float: left;
 			height: 100px;
 			background-color: pink;
 		}
