--- a/定位/11-绝对定位改变display属性.html
+++ b/定位/11-绝对定位改变display属性.html
@@ -5,7 +5,7 @@
 	<title>Document</title>
 	<style>
 		div {
-			float: left;
+			position: absolute;
 			height: 100px;
 			background-color: pink;
 		}
