--- a/定位/11-绝对定位改变display属性.html
+++ b/定位/11-绝对定位改变display属性.html
@@ -9,9 +9,18 @@
 			height: 100px;
 			background-color: pink;
 		}
+		span {
+			position: absolute;
+			top: 200px;
+			left: 200px;
+			width: 300px;
+			height: 300px;
+			background-color: purple;
+		}
 	</style>
 </head>
 <body>
 	<div>1111111111111111111111111111</div>
+	<span></span>
 </body>
 </html>
