a1.66（淘宝轮播图-实现左侧按钮）

--- a/定位/14-淘宝轮播图.html
+++ b/定位/14-淘宝轮播图.html
@@ -20,10 +20,22 @@
 			position: absolute;
 			top: 50%;
 			margin-top: -15px;
-			left: 0;
 			width: 20px;
 			height: 30px;
-			background-color: pink;
+			background: rgba(0, 0, 0, .2);
+			text-decoration: none;
+			color: #fff;
+			text-align: center;
+			line-height: 30px;
+		}
+		.arrow-l {
+			left: 0;
+			/*圆角矩形*/
+			/*border-radius: 15px;*/
+			/*右上角*/
+			border-top-right-radius: 15px;
+			/*右下角*/
+			border-bottom-right-radius: 15px;
 		}
 	</style>
 </head>
