a1.68（淘宝轮播图-实现鼠标经过左右按钮变色）

--- a/定位/14-淘宝轮播图.html
+++ b/定位/14-淘宝轮播图.html
@@ -46,6 +46,10 @@
 			/*border-radius: 左上角 右上角  右下角  左下角;*/
 			border-radius: 15px 0 0 15px;
 		}
+		.arrow-l:hover,
+		.arrow-r:hover {
+			background: rgba(0, 0, 0, .4);
+		}
 	</style>
 </head>
 <body>
