a1.69（淘宝轮播图-实现下方小圆点的背景框）

--- a/定位/14-淘宝轮播图.html
+++ b/定位/14-淘宝轮播图.html
@@ -50,6 +50,16 @@
 		.arrow-r:hover {
 			background: rgba(0, 0, 0, .4);
 		}
+		.circle {
+			position: absolute;
+			left: 50%;
+			margin-left: -35px;
+			bottom: 15px;
+			width: 70px;
+			height: 13px;
+			background: rgba(255, 255, 255, 0.3);
+			border-radius: 7px;
+		}
 	</style>
 </head>
 <body>
@@ -60,6 +70,10 @@
 		<a href="#" class="arrow-r"> &gt; </a>
 		<!-- 图片 -->
 		<img src="images/taobao.jpg" alt="">
+		<!-- 小圆点 -->
+		<ul class="circle">
+
+		</ul>
 	</div>
 </body>
 </html>
