a1.73（学成网案例-实现左侧固定的导航）

--- a/定位/study/index.html
+++ b/定位/study/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<!-- 固定的侧边栏 -->
+	<div class="fixedbar"></div>
 	<!-- header头部模块开始 -->
 	<div class="header w">
 		<!-- logo -->
