a1.78（example03-3——overflow：scroll）

--- a/高级特性/03-overflow溢出隐藏.html
+++ b/高级特性/03-overflow溢出隐藏.html
@@ -5,7 +5,8 @@
 	<title>Document</title>
 	<style>
 		div {
-			overflow: hidden;
+			/*overflow: hidden;*/
+			overflow: scroll;
 			width: 150px;
 			height: 150px;
 			border: 1px solid red;
