a1.83（淘宝轮播图 =>  优化鼠标经过小圆点出现小手）

--- a/定位/14-淘宝轮播图.html
+++ b/定位/14-淘宝轮播图.html
@@ -85,7 +85,7 @@
 		<!-- 图片 -->
 		<img src="images/taobao.jpg" alt="">
 		<!-- 小圆点 -->
-		<ul class="circle">
+		<ul class="circle" style="cursor: pointer;">
 			<li></li>
 			<li class="current"></li>
 			<li></li>
