a1.84（学成网案例  =>  优化搜索按钮提示小手）

--- a/定位/study/index.html
+++ b/定位/study/index.html
@@ -28,7 +28,7 @@
 		<!--	.search  	-->
 		<div class="search">
 			<input type="text" value="输入关键词">
-			<button></button>
+			<button style="cursor: pointer"></button>
 		</div>
 		<!-- user -->
 		<div class="user">
