a1.93（example05-2—— 文字溢出 用省略号替代  ellipsis 省略号）

--- a/高级特性/11-溢出的文字省略号显示.html
+++ b/高级特性/11-溢出的文字省略号显示.html
@@ -10,6 +10,8 @@
 			border: 1px solid pink;
 			/*white-space: normal;*/
 			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
 		}
 	</style>
 </head>
