a1.98（example09-2—— 实现推拉门原理）

--- a/高级特性/14-滑动门原理.html
+++ b/高级特性/14-滑动门原理.html
@@ -12,11 +12,20 @@
 			padding-left: 15px;
 			color: #fff;
 		}
+		a span {
+			display: inline-block;
+			height: 33px;
+			background: url(images/to.png) no-repeat right top;
+			padding-right: 15px;
+		}
 	</style>
 </head>
 <body>
 	<a href="#">
 		<span>首页</span>
+	</a>
+	<a href="#">
+		<span>公司新闻</span>
 	</a>
 </body>
 </html>
