a2.01（example10-2—— 实现微博导航栏基本样式）

--- a/高级特性/15-微信导航栏案例.html
+++ b/高级特性/15-微信导航栏案例.html
@@ -14,12 +14,21 @@
 		body {
 			background: url(images/wx.jpg) repeat-x;
 		}
+		.nav {
+			margin-top: 20px;
+		}
+		.nav li {
+			float: left;
+			margin: 0 5px;
+		}
 		.nav a {
 			display: inline-block;
 			height: 33px;
 			background: url(images/to.png) no-repeat;
 			padding-left: 15px;
 			color: #fff;
+			line-height: 33px;
+			font-size: 14px;
 		}
 		.nav a span {
 			display: inline-block;
@@ -35,9 +44,27 @@
 		<ul>
 			<li>
 				<a href="#">
-					<span>
-						首页
-					</span>
+					<span>首页</span>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<span>帮助与反馈</span>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<span>公众平台</span>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<span>开放平台</span>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<span>三个字</span>
 				</a>
 			</li>
 		</ul>
