a2.02（example10-3—— 实现微博导航栏）

--- a/高级特性/15-微信导航栏案例.html
+++ b/高级特性/15-微信导航栏案例.html
@@ -36,6 +36,10 @@
 			background: url(images/to.png) no-repeat right;
 			padding-right: 15px;
 		}
+		.nav a:hover,
+		.nav a:hover span {
+			background-image: url(images/ao.png);
+		}
 	</style>
 </head>
 <body>
