--- a/h5+c3（1）/02-多媒体标签音频标签.html
+++ b/h5+c3（1）/02-多媒体标签音频标签.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-     <audio src="media/snow.mp3" controls="controls"></audio>
-<!--    <audio controls="controls">-->
-<!--        <source src="media/snow.mp3" type="audio/mpeg" />-->
-<!--        <source src="media/snow.ogg" type="audio/ogg" />-->
-<!--            您的浏览器不支持播放声音-->
-<!--    </audio>-->
+<!--     <audio src="media/snow.mp3" controls="controls"></audio>-->
+    <audio controls="controls">
+        <source src="media/snow.mp3" type="audio/mpeg" />
+        <source src="media/snow.ogg" type="audio/ogg" />
+            您的浏览器不支持播放声音
+    </audio>
 </body>
 
 </html>
