--- a/h5+c3（1）/03-多媒体标签视频标签.html
+++ b/h5+c3（1）/03-多媒体标签视频标签.html
@@ -16,7 +16,7 @@
 <body>
 <!--     <video src="media/video.mp4" controls="controls"></video>-->
     <!-- 谷歌浏览器把自动播放功能给禁用了 有解决方案： 给视频添加静音属性 -->
-    <video autoplay muted="muted" loop="loop">
+    <video muted="muted" loop="loop" poster="media/pig.jpg" controls>
         <source src="media/video.mp4" type="video/mp4" />
         <source src="media/video.ogg" type="video/ogg" />
         您的浏览器太low了，不支持播放此视频
