a2.17（example01-2——禁用按钮，样式不可为小手，而是默认小白箭头

--- a/h5+c3（1）/06-CSS3属性选择器.html
+++ b/h5+c3（1）/06-CSS3属性选择器.html
@@ -10,6 +10,9 @@
         button {
             cursor: pointer;
         }
+        button[disabled] {
+            cursor: default;
+        }
     </style>
 </head>
 
