a2.18（example01-3——根据属性值的不同选择对应的元素）

--- a/h5+c3（1）/06-CSS3属性选择器.html
+++ b/h5+c3（1）/06-CSS3属性选择器.html
@@ -13,6 +13,9 @@
         button[disabled] {
             cursor: default;
         }
+        input[type="search"] {
+            color: pink;
+        }
     </style>
 </head>
 
@@ -22,6 +25,13 @@
     <button>按钮</button>
     <button disabled="disabled">按钮</button>
     <button disabled="disabled">按钮</button>
+
+    <input type="text" name="" id="" value="文本框">
+    <input type="text" name="" id="" value="文本框">
+    <input type="text" name="" id="" value="文本框">
+    <input type="search" name="" id="" value="搜索框">
+    <input type="search" name="" id="" value="搜索框">
+    <input type="search" name="" id="" value="搜索框">
 </body>
 
 </html>
