a2.19（example01-4——使用以某个值开头的 属性值元素样式）

--- a/h5+c3（1）/06-CSS3属性选择器.html
+++ b/h5+c3（1）/06-CSS3属性选择器.html
@@ -16,6 +16,9 @@
         input[type="search"] {
             color: pink;
         }
+        div[class^="icon"] {
+            color: red;
+        }
     </style>
 </head>
 
@@ -32,6 +35,9 @@
     <input type="search" name="" id="" value="搜索框">
     <input type="search" name="" id="" value="搜索框">
     <input type="search" name="" id="" value="搜索框">
+    <div class="icon1">图标1</div>
+    <div class="icon2">图标2</div>
+    <div class="icon3">图标3</div>
 </body>
 
 </html>
