--- a/h5+c3（1）/06-CSS3属性选择器.html
+++ b/h5+c3（1）/06-CSS3属性选择器.html
@@ -19,6 +19,9 @@
         div[class^="icon"] {
             color: red;
         }
+        div[class$="icon"] {
+            color: green;
+        }
     </style>
 </head>
 
@@ -38,6 +41,8 @@
     <div class="icon1">图标1</div>
     <div class="icon2">图标2</div>
     <div class="icon3">图标3</div>
+    <div class="iicon3">图标4</div>
+    <div class="absicon">图标5</div>
 </body>
 
 </html>
