a2.21（example01-6——可以在任意位置的，如包含`"icon"`的属性值。）

--- a/h5+c3（1）/06-CSS3属性选择器.html
+++ b/h5+c3（1）/06-CSS3属性选择器.html
@@ -22,6 +22,9 @@
         div[class$="icon"] {
             color: green;
         }
+        div[class*="icon"] {
+            color: blue;
+        }
     </style>
 </head>
 
