--- a/h5+c3（1）/11-伪元素选择器案例.html
+++ b/h5+c3（1）/11-伪元素选择器案例.html
@@ -22,13 +22,29 @@
             right: 10px;
         }
         
-        div {
+        div,
+        p{
             position: relative;
             width: 249px;
             height: 35px;
             border: 1px solid red;
         }
 
+        /*p::after {*/
+        /*    content: '';*/
+        /*    position: absolute;*/
+        /*    top: 10px;*/
+        /*    right: 10px;*/
+        /*    font-family: 'icomoon';*/
+        /*}*/
+
+        p::after {
+            content: '\ea50';
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-family: 'icomoon';
+        }
     </style>
 </head>
 
@@ -36,6 +52,8 @@
     <div>
         <span></span>
     </div>
+
+    <p></p>
 </body>
 
 </html>
