--- a/h5+c3（2）/02-flex主轴方向.html
+++ b/h5+c3（2）/02-flex主轴方向.html
@@ -12,8 +12,11 @@
             width: 800px;
             height: 300px;
             background-color: pink;
-            flex-direction: row;
+            /*flex-direction: row;*/
+            /*flex-direction: row-reverse;*/
+            flex-direction: column;
         }
+
         div span {
             width: 150px;
             height: 100px;
