a2.32（example03-2——设置主轴上的子元素排列2）

--- a/h5+c3（2）/03-flex设置主轴上的子元素排列方式1.html
+++ b/h5+c3（2）/03-flex设置主轴上的子元素排列方式1.html
@@ -14,7 +14,13 @@
             background-color: pink;
             /* justify-content: 是设置主轴上子元素的排列方式 */
             /* justify-content: flex-start; */
-             justify-content: flex-end;
+            /* justify-content: flex-end;*/
+            /* 让子元素居中对齐 */
+            /* justify-content: center;*/
+            /* 平分剩余空间 */
+            /* justify-content: space-around;*/
+            /* 先两边贴边， 在分配剩余的空间 */
+            justify-content: space-between;
         }
         
         div span {
