a2.36（example05-2——align-items 设置侧轴上的子元素排列方式2）

--- a/h5+c3（2）/06-flex设置侧轴上的子元素排列方式.html
+++ b/h5+c3（2）/06-flex设置侧轴上的子元素排列方式.html
@@ -12,16 +12,16 @@
             width: 800px;
             height: 400px;
             background-color: pink;
-            /*flex-direction: column;*/
+            flex-direction: column;
             justify-content: center;
             /*align-items: flex-start;*/
-            align-items: stretch;
-            /*align-items: center;*/
+            /*align-items: stretch;*/
+            align-items: center;
         }
         
         div span {
             width: 150px;
-            /*height: 100px;*/
+            height: 100px;
             background-color: purple;
             color: #fff;
             margin: 10px;
