--- a/h5+c3（2）/09-flex子项flex份数.html
+++ b/h5+c3（2）/09-flex子项flex份数.html
@@ -33,6 +33,18 @@
             background-color: blue;
         }
 
+        p {
+            display: flex;
+            width: 60%;
+            height: 150px;
+            background-color: pink;
+            margin: 100px auto;
+        }
+
+        p span {
+            /*每个p各占一份*/
+            flex: 1;
+        }
     </style>
 </head>
 
@@ -42,6 +54,11 @@
         <div></div>
         <div></div>
     </section>
+    <p>
+        <span>1</span>
+        <span>2</span>
+        <span>3</span>
+    </p>
 </body>
 
 </html>
