a2.42（example08-4——flex子项flex份数模板 =>  p标签划分份数）

--- a/h5+c3（2）/09-flex子项flex份数.html
+++ b/h5+c3（2）/09-flex子项flex份数.html
@@ -45,6 +45,12 @@
             /*每个p各占一份*/
             flex: 1;
         }
+
+        p span:nth-child(2) {
+            /* 2号盒子占两份，其余第1个和第3个盒子占一份*/
+            flex: 2;
+            background-color: purple;
+        }
     </style>
 </head>
 
