--- a/h5+c3（2）/10-align-self和order.html
+++ b/h5+c3（2）/10-align-self和order.html
@@ -12,7 +12,6 @@
             width: 80%;
             height: 300px;
             background-color: pink;
-            align-items: flex-end;
         }
         
         div span {
@@ -20,6 +19,10 @@
             height: 100px;
             background-color: purple;
             margin-right: 5px;
+        }
+
+        div span:nth-child(3) {
+            align-self: flex-end;
         }
     </style>
 </head>
