--- a/h5+c3（2）/10-align-self和order.html
+++ b/h5+c3（2）/10-align-self和order.html
@@ -21,6 +21,11 @@
             margin-right: 5px;
         }
 
+        div span:nth-child(2) {
+            /* 默认是0   -1比0小所以在前面 */
+            order: -1;
+        }
+
         div span:nth-child(3) {
             align-self: flex-end;
         }
