--- a/h5+c3（2）/携程网首页案例制作/index.html
+++ b/h5+c3（2）/携程网首页案例制作/index.html
@@ -8,6 +8,9 @@
     <title>Title</title>
 </head>
 <body>
-    <div class="search-index"></div>
+    <div class="search-index">
+        <div class="search"></div>
+        <a href="#" class="user"></a>
+    </div>
 </body>
 </html>
