a2.51（携程网首页案例——精灵图图标）

--- a/h5+c3（2）/携程网首页案例制作/index.html
+++ b/h5+c3（2）/携程网首页案例制作/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="search-index">
         <div class="search"></div>
-        <a href="#" class="user"></a>
+        <a href="#" class="user">我 的</a>
     </div>
 </body>
 </html>
