a2.57（携程网首页案例——完成第二行静态轮播图）

--- a/h5+c3（2）/携程网首页案例制作/index.html
+++ b/h5+c3（2）/携程网首页案例制作/index.html
@@ -8,9 +8,14 @@
     <title>Title</title>
 </head>
 <body>
+    <!--顶部搜索-->
     <div class="search-index">
         <div class="search">搜索:目的地/酒店/景点/航班号</div>
         <a href="#" class="user">我 的</a>
+    </div>
+    <!--焦点图模块-->
+    <div class="focus">
+        <img src="upload/focus.jpg" alt="">
     </div>
 </body>
 </html>
