a2.58（携程网首页案例——局部导航栏外部盒子布局）

--- a/h5+c3（2）/携程网首页案例制作/index.html
+++ b/h5+c3（2）/携程网首页案例制作/index.html
@@ -17,5 +17,9 @@
     <div class="focus">
         <img src="upload/focus.jpg" alt="">
     </div>
+    <!--局部导航栏-->
+    <ul class="local-nav">
+
+    </ul>
 </body>
 </html>
