--- a/h5+c3（2）/携程网首页案例制作/index.html
+++ b/h5+c3（2）/携程网首页案例制作/index.html
@@ -19,11 +19,36 @@
     </div>
     <!--局部导航栏-->
     <ul class="local-nav">
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
+        <li>
+            <a href="#" title="景点·玩乐">
+                <span class="local-nav-icon"></span>
+                <span>景点·玩乐</span>
+             </a>
+        </li>
+        <li>
+            <a href="#" title="景点·玩乐">
+                <span class="local-nav-icon"></span>
+                <span>景点·玩乐</span>
+            </a>
+        </li>
+        <li>
+            <a href="#" title="景点·玩乐">
+                <span class="local-nav-icon"></span>
+                <span>景点·玩乐</span>
+            </a>
+        </li>
+        <li>
+            <a href="#" title="景点·玩乐">
+                <span class="local-nav-icon"></span>
+                <span>景点·玩乐</span>
+            </a>
+        </li>
+        <li>
+            <a href="#" title="景点·玩乐">
+                <span class="local-nav-icon"></span>
+                <span>景点·玩乐</span>
+            </a>
+        </li>
     </ul>
 </body>
 </html>
