--- a/h5+c3（2）/携程网首页案例制作/index.html
+++ b/h5+c3（2）/携程网首页案例制作/index.html
@@ -21,32 +21,32 @@
     <ul class="local-nav">
         <li>
             <a href="#" title="景点·玩乐">
-                <span class="local-nav-icon"></span>
+                <span class="local-nav-icon-icon1"></span>
                 <span>景点·玩乐</span>
              </a>
         </li>
         <li>
-            <a href="#" title="景点·玩乐">
-                <span class="local-nav-icon"></span>
-                <span>景点·玩乐</span>
+            <a href="#" title="周边游">
+                <span class="local-nav-icon-icon2"></span>
+                <span>周边游</span>
             </a>
         </li>
         <li>
-            <a href="#" title="景点·玩乐">
-                <span class="local-nav-icon"></span>
-                <span>景点·玩乐</span>
+            <a href="#" title="美食林">
+                <span class="local-nav-icon-icon3"></span>
+                <span>美食林</span>
             </a>
         </li>
         <li>
-            <a href="#" title="景点·玩乐">
-                <span class="local-nav-icon"></span>
-                <span>景点·玩乐</span>
+            <a href="#" title="一日游">
+                <span class="local-nav-icon-icon4"></span>
+                <span>一日游</span>
             </a>
         </li>
         <li>
-            <a href="#" title="景点·玩乐">
-                <span class="local-nav-icon"></span>
-                <span>景点·玩乐</span>
+            <a href="#" title="当地攻略">
+                <span class="local-nav-icon-icon5"></span>
+                <span>当地攻略</span>
             </a>
         </li>
     </ul>
