a2.62（携程网首页案例——第四行主导航整体布局）

--- a/h5+c3（2）/携程网首页案例制作/index.html
+++ b/h5+c3（2）/携程网首页案例制作/index.html
@@ -50,5 +50,12 @@
             </a>
         </li>
     </ul>
+
+    <!--主导航栏-->
+    <nav>
+        <div class="nav-common">1</div>
+        <div class="nav-common">2</div>
+        <div class="nav-common">3</div>
+    </nav>
 </body>
 </html>
