--- a/h5+c3（2）/携程网首页案例制作/index.html
+++ b/h5+c3（2）/携程网首页案例制作/index.html
@@ -54,9 +54,17 @@
     <!--主导航栏-->
     <nav>
         <div class="nav-common">
-            <div class="nav-items">a</div>
-            <div class="nav-items">b</div>
-            <div class="nav-items">c</div>
+            <div class="nav-items">
+                <a href="#">海外酒店</a>
+            </div>
+            <div class="nav-items">
+                <a href="#">海外酒店</a>
+                <a href="#">特价酒店</a>
+            </div>
+            <div class="nav-items">
+                <a href="#">海外酒店</a>
+                <a href="#">特价酒店</a>
+            </div>
         </div>
         <div class="nav-common">2</div>
         <div class="nav-common">3</div>
