a2.65（携程网首页案例——完成第四行整个布局）

--- a/h5+c3（2）/携程网首页案例制作/index.html
+++ b/h5+c3（2）/携程网首页案例制作/index.html
@@ -66,8 +66,32 @@
                 <a href="#">特价酒店</a>
             </div>
         </div>
-        <div class="nav-common">2</div>
-        <div class="nav-common">3</div>
+        <div class="nav-common">
+            <div class="nav-items">
+                <a href="#">海外酒店</a>
+            </div>
+            <div class="nav-items">
+                <a href="#">海外酒店</a>
+                <a href="#">特价酒店</a>
+            </div>
+            <div class="nav-items">
+                <a href="#">海外酒店</a>
+                <a href="#">特价酒店</a>
+            </div>
+        </div>
+        <div class="nav-common">
+            <div class="nav-items">
+                <a href="#">海外酒店</a>
+            </div>
+            <div class="nav-items">
+                <a href="#">海外酒店</a>
+                <a href="#">特价酒店</a>
+            </div>
+            <div class="nav-items">
+                <a href="#">海外酒店</a>
+                <a href="#">特价酒店</a>
+            </div>
+        </div>
     </nav>
 </body>
 </html>
