a2.67（携程网首页案例——完成第四行样式）

--- a/h5+c3（2）/携程网首页案例制作/index.html
+++ b/h5+c3（2）/携程网首页案例制作/index.html
@@ -55,41 +55,41 @@
     <nav>
         <div class="nav-common">
             <div class="nav-items">
-                <a href="#">海外酒店</a>
+                <a href="#">酒店</a>
             </div>
             <div class="nav-items">
                 <a href="#">海外酒店</a>
                 <a href="#">特价酒店</a>
             </div>
             <div class="nav-items">
-                <a href="#">海外酒店</a>
-                <a href="#">特价酒店</a>
+                <a href="#">团购</a>
+                <a href="#">民宿·客栈</a>
             </div>
         </div>
         <div class="nav-common">
             <div class="nav-items">
-                <a href="#">海外酒店</a>
+                <a href="#">机票</a>
             </div>
             <div class="nav-items">
-                <a href="#">海外酒店</a>
-                <a href="#">特价酒店</a>
+                <a href="#">火车票</a>
+                <a href="#">特价机票</a>
             </div>
             <div class="nav-items">
-                <a href="#">海外酒店</a>
-                <a href="#">特价酒店</a>
+                <a href="#">汽车票·船票</a>
+                <a href="#">专车·租车</a>
             </div>
         </div>
         <div class="nav-common">
             <div class="nav-items">
-                <a href="#">海外酒店</a>
+                <a href="#">旅游</a>
             </div>
             <div class="nav-items">
-                <a href="#">海外酒店</a>
-                <a href="#">特价酒店</a>
+                <a href="#">门票</a>
+                <a href="#">目的地攻略</a>
             </div>
             <div class="nav-items">
-                <a href="#">海外酒店</a>
-                <a href="#">特价酒店</a>
+                <a href="#">游轮旅行</a>
+                <a href="#">定制旅行</a>
             </div>
         </div>
     </nav>
