--- a/h5+c3（2）/携程网首页案例制作/index.html
+++ b/h5+c3（2）/携程网首页案例制作/index.html
@@ -93,5 +93,20 @@
             </div>
         </div>
     </nav>
+
+    <!-- 侧导航栏 -->
+    <ul class="subnav-entry">
+        <!--li{$}*10-->
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+        <li>6</li>
+        <li>7</li>
+        <li>8</li>
+        <li>9</li>
+        <li>10</li>
+    </ul>
 </body>
 </html>
