a2.69（携程网首页案例——完成第五行样式）

--- a/h5+c3（2）/携程网首页案例制作/index.html
+++ b/h5+c3（2）/携程网首页案例制作/index.html
@@ -97,16 +97,66 @@
     <!-- 侧导航栏 -->
     <ul class="subnav-entry">
         <!--li{$}*10-->
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li>6</li>
-        <li>7</li>
-        <li>8</li>
-        <li>9</li>
-        <li>10</li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon-icon1"></span>
+                <spa>自由行</spa>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon-icon2"></span>
+                <span>WIFI电话卡</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon-icon3"></span>
+                <span>保险·签证</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon-icon4"></span>
+                <span>换钞·购物</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon-icon5"></span>
+                <span>向导·包车</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon-icon6"></span>
+                <span>特价机票</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon-icon7"></span>
+                <span>礼品卡</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon-icon8"></span>
+                <span>申卡·借钱</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon-icon9"></span>
+                <span>旅拍</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <span class="subnav-entry-icon-icon10"></span>
+                <span>更多</span>
+            </a>
+        </li>
     </ul>
 </body>
 </html>
