a2.70（携程网首页案例——第六行外部大盒子布局）

--- a/h5+c3（2）/携程网首页案例制作/index.html
+++ b/h5+c3（2）/携程网首页案例制作/index.html
@@ -158,5 +158,10 @@
             </a>
         </li>
     </ul>
+
+    <!--sales-->
+    <div class="sales-box">
+        123
+    </div>
 </body>
 </html>
