a2.71（携程网首页案例——第六行热门活动图标）

--- a/h5+c3（2）/携程网首页案例制作/index.html
+++ b/h5+c3（2）/携程网首页案例制作/index.html
@@ -161,7 +161,10 @@
 
     <!--sales-->
     <div class="sales-box">
-        123
+        <div class="sales-hd">
+            <h2>热门活动</h2>
+            <a href="#">更多</a>
+        </div>
     </div>
 </body>
 </html>
