a2.72（携程网首页案例——第六行获取更多福利按钮）

--- a/h5+c3（2）/携程网首页案例制作/index.html
+++ b/h5+c3（2）/携程网首页案例制作/index.html
@@ -163,7 +163,7 @@
     <div class="sales-box">
         <div class="sales-hd">
             <h2>热门活动</h2>
-            <a href="#">更多</a>
+            <a href="#" class="more">获取更多福利</a>
         </div>
     </div>
 </body>
