--- a/h5+c3（2）/携程网首页案例制作/index.html
+++ b/h5+c3（2）/携程网首页案例制作/index.html
@@ -165,6 +165,35 @@
             <h2>热门活动</h2>
             <a href="#" class="more">获取更多福利</a>
         </div>
+        <div class="sales-bd">
+            <div class="row">
+                <a href="#">
+                    <img src="upload/pic1.jpg" alt="">
+                </a>
+                <a href="#">
+                    <img src="upload/pic2.jpg" alt="">
+
+                </a>
+            </div>
+            <div class="row">
+                <a href="#">
+                    <img src="upload/pic3.jpg" alt="">
+                </a>
+                <a href="#">
+                    <img src="upload/pic4.jpg" alt="">
+
+                </a>
+            </div>
+            <div class="row">
+                <a href="#">
+                    <img src="upload/pic5.jpg" alt="">
+                </a>
+                <a href="#">
+                    <img src="upload/pic6.jpg" alt="">
+
+                </a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
