a2.75（translate不影响其他元素的位置）

--- a/c3动画/01-2D转换之位移translate.html
+++ b/c3动画/01-2D转换之位移translate.html
@@ -21,12 +21,21 @@
             /* transform: translateX(100px); */
             /* 2. 如果只移动y坐标 */
             /* transform: translate(0, 100px); */
-             transform: translateY(100px);
+            /* transform: translateY(100px); */
+        }
+
+        div:first-child {
+            transform: translate(30px, 30px);
+        }
+
+        div:last-child {
+            background-color: purple;
         }
     </style>
 </head>
 
 <body>
+    <div></div>
     <div></div>
 </body>
 
