a2.77（让一个盒子水平垂直居中——使用translate实现）

--- a/c3动画/02-让盒子实现水平和垂直居中.html
+++ b/c3动画/02-让盒子实现水平和垂直居中.html
@@ -24,8 +24,10 @@
             width: 200px;
             height: 200px;
             background-color: purple;
-            margin-top: -100px;
-            margin-left: -100px;
+            /* margin-top: -100px;
+            margin-left: -100px; */
+            /* translate(-50%, -50%)  盒子往上走自己高度的一半   */
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
