--- a/c3动画/02-让盒子实现水平和垂直居中.html
+++ b/c3动画/02-让盒子实现水平和垂直居中.html
@@ -29,6 +29,11 @@
             /* translate(-50%, -50%)  盒子往上走自己高度的一半   */
             transform: translate(-50%, -50%);
         }
+
+        span {
+            /* translate 对于行内元素是无效的 */
+            transform: translate(300px, 300px);
+        }
     </style>
 </head>
 
@@ -37,6 +42,7 @@
     <div>
         <p></p>
     </div>
+    <span>123</span>
 </body>
 
 </html>
