--- a/c3动画/17-3D移动translate3d.html
+++ b/c3动画/17-3D移动translate3d.html
@@ -7,6 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
+        body {
+            /* 透视写到被观察元素的父盒子上面 */
+            perspective: 500px;
+        }
+
         div {
             width: 200px;
             height: 200px;
@@ -19,7 +24,7 @@
             /* transform: translate3d(x,y,z); */
             /* transform: translate3d(100px, 100px, 100px); */
             /* 5. xyz是不能省略的，如果没有就写0 */
-            transform: translate3d(0, 100px, 100px);
+            transform: translate3d(400px, 100px, 100px);
         }
     </style>
 </head>
