a3.11（border 边框——绘制多样三角形形状）

--- a/01/05.边框三角形.html
+++ b/01/05.边框三角形.html
@@ -14,12 +14,15 @@
             border-width: 70px;
 
             border-style: solid;
-            border-color: green red black pink;
+            /*border-color: green red black pink;*/
             /*border-bottom: none;*/
             /*border-right: none;*/
-            border-top-color: transparent;
-            border-left-color: transparent;
-            border-right-color: transparent;
+            /*border-top-color: transparent;*/
+            /*border-left-color: transparent;*/
+            /*border-right-color: transparent;*/
+            /*border-color: green rgba(255, 243, 34, 0.5) transparent;*/
+            /*border-color: transparent green transparent;*/
+            border-color: transparent transparent transparent green;
         }
     </style>
 </head>
