a3.27（文本设置——字体也可简写复合样式）

--- a/02/05.文字设置.html
+++ b/02/05.文字设置.html
@@ -8,9 +8,11 @@
             width: 200px;
             height: 200px;
             border: 3px solid #128fc2;
-            font-weight: bold;
-            font-family: "Axure Handwriting";
-            font-style:italic;
+            /*font-weight: bold;*/
+            /*font-family: "Axure Handwriting";*/
+            /*font-style:italic;*/
+            /*font: normal bold 20px Axure Handwriting;*/
+            font: normal bold 20px/40px Axure Handwriting;
         }
         /*.first{*/
         /*    font-weight: 100;*/
